k8s/infrastructure/common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-secrets
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubechecks
