k8s/infrastructure/common/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    dev.pc-tips: network
---
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    dev.pc-tips: network
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    dev.pc-tips: network
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    dev.pc-tips: network
