k8s/infrastructure/common/base-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-namespace-communication
spec:
  description: "Allow all pods within namespace to communicate and access essential cluster services"
  endpointSelector:
    matchLabels: {}  # Matches all pods in namespace
  ingress:
    # Allow all pods within the same namespace to communicate
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ${NAMESPACE}
    # Allow ingress from monitoring (prometheus, etc)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
  egress:
    # Allow all pods within the same namespace to communicate
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ${NAMESPACE}
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow access to cert-manager webhook
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app.kubernetes.io/name: cert-manager
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "9402"
              protocol: TCP
    # Allow access to external-secrets webhook
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                app.kubernetes.io/name: external-secrets
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow access to Kubernetes API
    - toServices:
        - k8sServiceSelector:
            selector:
              matchLabels:
                provider: kubernetes
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow metrics endpoints for monitoring
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
